<resources>
    <string name="app_name">CMRL Customer</string>
    <string name="book_cab">Book Cab</string>
    <string name="track_cab">Track Cab</string>
    <string name="your_rides">Your Rides</string>
    <string name="trip_details">Trip Details</string>
    <string name="book_confirm">Booking Confirmation</string>
    <string name="drop_home">Drop at Home</string>
    <string name="drop_metro">Drop at Metro</string>
    <string name="pick_up_location">Pick Up\nLocation</string>
    <string name="drop_location">Drop\nLocation</string>
    <string name="search">search</string>
    <string name="available_seats">Available Seats</string>
    <string name="book_now">Book Now</string>
    <string name="fare">Fare :</string>
    <string name="booked">BOOKED</string>
    <string name="available">AVAILABLE</string>
    <string name="payment_method">Payment Method</string>
    <string name="mail_invoice">Mail Invoice</string>
    <string name="get_support">Get Support</string>
    <string name="completed">Completed</string>
    <string name="confirmed">Booking Confirmed</string>
    <string name="booking_number">Booking Number</string>
    <string name="car_number">Car Number</string>
    <string name="time">Time</string>
    <string name="datetime">Date &amp; Time</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="available_routes">Available Routes</string>
    <string name="track">Track</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="location_failed">Oops! Location fetching failed!</string>
    <string name="alert_enable_map">Please ensure that you have installed Google map</string>
    <string name="something">Something went wrong! Please try again later.</string>
    <string name="booking">Booking…</string>
</resources>
