<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_light_gray"
    android:orientation="vertical"
    tools:context=".activity.book.BookCabActivity">

    <include layout="@layout/app_header" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_booking">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="15dp"
                    android:src="@drawable/ic_book_cab" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_border_gray"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/activity_book_metro_section"
                    style="@style/DropHome"
                    android:background="@color/app_light_blue"
                    android:gravity="center"
                    android:text="@string/drop_home" />

                <TextView
                    android:id="@+id/activity_book_home_section"
                    style="@style/DropHome"
                    android:background="@color/app_blue"
                    android:gravity="center"
                    android:text="@string/drop_home" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubTitle"
                    android:text="@string/pick_up_location" />

                <TextView
                    android:id="@+id/activity_book_pick_location"
                    style="@style/BlueBorderWithArrow"
                    android:tag="-1" />

                <ImageView
                    android:id="@+id/activity_book_current_location"
                    style="@style/BackButton"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp"
                    android:src="@mipmap/ic_my_location"
                    android:tint="@color/app_blue" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubTitle"
                    android:text="@string/drop_location" />

                <TextView
                    android:id="@+id/activity_book_drop_location"
                    style="@style/BlueBorderWithArrow"
                    android:tag="-1" />

                <ImageView
                    style="@style/BackButton"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp"
                    android:visibility="invisible" />

            </LinearLayout>

            <Button
                android:id="@+id/activity_book_search_cab"
                style="@style/SubmitButton"
                android:text="@string/search" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>