<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_light_gray"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.book.BookCabActivity">

    <include layout="@layout/app_header" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="-50dp"
        app:cardBackgroundColor="@color/app_blue"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/ic_metro_icon"
                android:tint="@color/app_white" />

            <TextView
                style="@style/SubTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="Your Booking is Confirmed"
                android:textColor="@color/app_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="-12.5dp"
                    android:layout_marginLeft="-12.5dp"
                    android:src="@mipmap/ic_circle_solid"
                    android:tint="@color/app_light_gray" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/app_light_gray" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="-12.5dp"
                    android:layout_marginRight="-12.5dp"
                    android:src="@mipmap/ic_circle_solid"
                    android:tint="@color/app_light_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bg_border_white_corners"
                android:orientation="vertical"
                android:padding="15dp">

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:hint="@string/booking_number">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ConfirmationEditText"
                        android:text="0045678" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:hint="@string/car_number">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ConfirmationEditText"
                        android:text="TN 65 AB 1234" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/time">

                    <android.support.design.widget.TextInputEditText
                        style="@style/ConfirmationEditText"
                        android:text="07:45 AM" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>