<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_light_gray"
    android:orientation="vertical"
    tools:context=".activity.book.TripDetailActivity">

    <include layout="@layout/app_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_map_static" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/activity_trip_recycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/app_light_gray" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="7.5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:src="@mipmap/ic_circle_solid"
                                android:tint="@color/app_green" />

                            <TextView
                                style="@style/SubTitle"
                                android:layout_width="0dp"
                                android:layout_marginLeft="5dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="4:31 AM - Ashok Nagar"
                                android:textColor="@color/app_black" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="7.5dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:src="@mipmap/ic_circle_solid"
                                android:tint="@color/app_red" />

                            <TextView
                                style="@style/SubTitle"
                                android:layout_width="0dp"
                                android:layout_marginLeft="5dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="4:41 AM - Thousand Lights"
                                android:textColor="@color/app_black" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/app_light_gray" />

                        <TextView
                            style="@style/SubTitle"
                            android:layout_width="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/payment_method"
                            android:textColor="@color/app_blue"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="15dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@mipmap/ic_credit_card"
                                android:tint="@color/app_gray" />

                            <TextView
                                style="@style/SubTitle"
                                android:layout_width="wrap_content"
                                android:gravity="center_vertical"
                                android:text="Credit Card"
                                android:textColor="@color/app_black" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="70dp" />

                    </LinearLayout>

                </android.support.v4.widget.NestedScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/app_blue"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/activity_trip_invoice"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/ic_circle_solid"
                            android:tint="@color/white" />

                        <TextView
                            style="@style/SubTitle"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/mail_invoice"
                            android:textColor="@color/app_white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/activity_trip_support"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/ic_circle_solid"
                            android:tint="@color/white" />

                        <TextView
                            style="@style/SubTitle"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/get_support"
                            android:textColor="@color/app_white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>